--- a/scram/templates/users/user_detail.html
+++ b/scram/templates/users/user_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "../base.html" %}
 {% load static %}
 
 {% block title %}User: {{ object.username }}{% endblock %}
@@ -33,4 +33,3 @@
 
 </div>
 {% endblock content %}
-
