feat(WUI): create column for each actiontype and list all entries
next step is to only show the entries with matching actiontypes under each column

--- a/scram/templates/route_manager/home.html
+++ b/scram/templates/route_manager/home.html
@@ -1,8 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
+  <div class="row">
+    {% for actiontype in Actiontypes %}
+      <div class="col">
+        <h2>{{ actiontype.name }}</h2>
+          {% for entry in Entries %}
+            <p>{{ entry.route }}</p>
+          {% endfor %}
+      </div>
+    {% endfor %}
+  </div>
+  <div class="row">
 
-  {% for entry in Entries %}
-    <p>{{ entry.route }}: {{ entry.actiontype }}</p>
-  {% endfor %}
+  </div>
 {% endblock %}
