feat(webUI): create the base html template, a navbar, and a simple home page

--- a/scram/templates/route_manager/home.html
+++ b/scram/templates/route_manager/home.html
@@ -6,7 +6,9 @@
       <div class="col">
         <h2>{{ actiontype.name }}</h2>
           {% for entry in Entries %}
-            <p>{{ entry.route }}</p>
+            {% if actiontype.name|lower == entry.actiontype|lower %}
+              <p>{{ entry.route }}</p>
+            {% endif %}
           {% endfor %}
       </div>
     {% endfor %}
