feat(UI-tweaks): add big nice search bar, bold the badge, dark navbar, add admin if superuser, add jumbotron for something to look at

--- a/scram/templates/base.html
+++ b/scram/templates/base.html
@@ -54,6 +54,15 @@
   <body>
     {% include 'navbar.html' %}
     <div class="container">
+      <div class="row justify-content-center">
+        <div class="jumbotron">
+          <h1 class="display-3 text-center font-weight-bold">SCRAM</h1>
+          <hr class="my-4">
+          <small class="text-muted">Security Catch and Release Automation Manager</small>
+        </div>
+      </div>
+    </div>
+    <div class="container">
 
       {% if messages %}
           {% for message in messages %}
