feat(looks): update the look of the WUI

--- a/scram/templates/navbar.html
+++ b/scram/templates/navbar.html
@@ -1,5 +1,5 @@
 {% load static i18n %}
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark justify-content-between mb-1">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark justify-content-between mb-1" style="background-color:#626366">
   <div class="container-fluid">
     <a class="navbar-brand font-weight-bold" href="{% url 'home' %}">
       <img class="img-responsive" id="logo" alt="logo" src="{% static 'images/favicons/favicon.ico' %}" width="25" height="25">
