--- a/scram/templates/base.html
+++ b/scram/templates/base.html
@@ -55,10 +55,10 @@
     {% include 'navbar.html' %}
     <div class="container">
       <div class="row justify-content-center">
-        <div class="jumbotron">
-          <h1 class="display-3 text-center font-weight-bold">SCRAM</h1>
+        <div class="jumbotron w-100" style="background-color:#626366">
+          <h1 class="display-3 text-center text-white font-weight-bold">SCRAM</h1>
           <hr class="my-4">
-          <small class="text-muted">Security Catch and Release Automation Manager</small>
+          <p class="text-center" style="color:#2ba6c8">Security Catch and Release Automation Manager</p>
         </div>
       </div>
     </div>
