--- a/scram/templates/route_manager/home.html
+++ b/scram/templates/route_manager/home.html
@@ -4,12 +4,14 @@
   <div class="row">
     {% for actiontype in Actiontypes %}
       <div class="col">
-        <h2>{{ actiontype.name }}</h2>
+        <h2 class="text-center">{{ actiontype.name|capfirst }}</h2>
+        <ul class="list-group list-group-flush">
           {% for entry in Entries %}
             {% if actiontype.name|lower == entry.actiontype|lower %}
-              <p>{{ entry.route }}</p>
+              <li class="list-group-item list-group-item-light text-center">{{ entry.route }}</li>
             {% endif %}
           {% endfor %}
+        </ul>
       </div>
     {% endfor %}
   </div>
