--- a/scram/templates/navbar.html
+++ b/scram/templates/navbar.html
@@ -30,8 +30,8 @@
           </li>
         {% endif %}
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <input class="form-control mb-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success mb-2" type="submit">Search</button>
         </form>
       </ul>
     </div>
