--- a/scram/templates/route_manager/entry_detail.html
+++ b/scram/templates/route_manager/entry_detail.html
@@ -7,12 +7,19 @@
         <tr>
           <th>Entry</th>
           <th>Actiontype</th>
+          <th></th>
         </tr>
         <tr>
           <td>{{ entry.route }}</td>
-          <td>{{ entry.actiontype.name }}</td>
+          <td class="text-center">{{ entry.actiontype.name }}</td>
+          <td>
+            <form class="form-inline" action="{% url 'route_manager:delete' entry.id %}" method="POST">
+            {% csrf_token %}
+            <button class="btn btn-danger btn-sm" type="submit">Delete Entry</button>
+            </form></td>
         </tr>
       </table>
     </div>
   </div>
+
 {% endblock %}
