--- a/ansible/traefik.yml.j2
+++ b/ansible/traefik.yml.j2
@@ -22,7 +22,7 @@ certificatesResolvers:
   letsencrypt:
     # https://docs.traefik.io/master/https/acme/#lets-encrypt
     acme:
-      email: "soehlert@es.net"
+      email: {{ scram_manager_email }}
       storage: /etc/traefik/acme/acme.json
       # https://docs.traefik.io/master/https/acme/#httpchallenge
       httpChallenge:
@@ -31,7 +31,7 @@ certificatesResolvers:
 http:
   routers:
     web-secure-router:
-      rule: "Host(`bhr-netlab.es.net`) || Host(`www.bhr-netlab.es.net`)"
+      rule: "Host(`{{ ansible_fqdn }}`) || Host(`www.{{ ansible_fqdn }}`)"
 
       entryPoints:
         - web-secure
@@ -43,7 +43,7 @@ http:
         certResolver: letsencrypt
 
     flower-secure-router:
-      rule: "Host(`bhr-netlab.es.net`)"
+      rule: "Host(`{{ ansible_fqdn }}`)"
       entryPoints:
         - flower
       service: flower
