--- a/scram/templates/route_manager/home.html
+++ b/scram/templates/route_manager/home.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="d-flex justify-content-center mt-2">
-    <form class="form-inline" action="/api/entrys/" method="post">
+    <form class="form-inline" action="{% url 'route_manager:add' %}" method="post">
       {% csrf_token %}
       <div class="form-group inline mb-2">
         <input class="form-control mb-2 mr-2" name="route" placeholder="cidr" type="text">
