--- a/ansible/nginx.conf.j2
+++ b/ansible/nginx.conf.j2
@@ -28,8 +28,8 @@ server {
     proxy_connect_timeout 600;
     proxy_send_timeout 600;
 
-    ssl_certificate /etc/ssl/server.crt;
-    ssl_certificate_key /etc/ssl/server.key;
+    #ssl_certificate /etc/ssl/server.crt;
+    #ssl_certificate_key /etc/ssl/server.key;
 
     location / {
         proxy_pass http://django;
