feat(static): attempt to handle staticfiles

--- a/ansible/nginx.conf.j2
+++ b/ansible/nginx.conf.j2
@@ -41,4 +41,8 @@ server {
         proxy_set_header   X-Forwarded-Server $host;
         proxy_set_header   X-Forwarded-Proto $scheme;
     }
+
+    location /staticfiles/ {
+        autoindex on;
+        root /staticfiles/;
 }
