--- a/ansible/django.env.j2
+++ b/ansible/django.env.j2
@@ -4,7 +4,7 @@
 DJANGO_SETTINGS_MODULE=config.settings.production
 DJANGO_SECRET_KEY={{ scram_django_secret_key }}
 DJANGO_ADMIN_URL=admin/
-DJANGO_ALLOWED_HOSTS={{ scram_traefik_host | default(ansible_fqdn) }}
+DJANGO_ALLOWED_HOSTS={{ scram_nginx_host | default(ansible_fqdn) }}
 
 # Security
 # ------------------------------------------------------------------------------
