--- a/ansible/nginx.conf.j2
+++ b/ansible/nginx.conf.j2
@@ -15,6 +15,20 @@ server {
     server_name {{ scram_server_alias }};
 {% endif %}
 
+    return 301 https://$host$request_uri;
+
+}
+
+server {
+    listen [::]:443 ssl;
+    listen 443 ssl;
+    server_name {{ scram_nginx_host | default(ansible_fqdn) }};
+
+{% if scram_server_alias is defined and scram_server_alias != '' %}
+    server_name {{ scram_server_alias }};
+{% endif %}
+
+
     server_tokens off;
     proxy_read_timeout 600;
     proxy_connect_timeout 600;
