--- a/ansible/nginx.conf.j2
+++ b/ansible/nginx.conf.j2
@@ -24,11 +24,14 @@ server {
     server_name {{ scram_server_alias }};
 {% endif %}
 
-
     server_tokens off;
     proxy_read_timeout 600;
     proxy_connect_timeout 600;
     proxy_send_timeout 600;
+
+    ssl_certificate /etc/ssl/server.crt;
+    ssl_certificate_key /etc/ssl/server.key;
+
 
     location / {
         proxy_pass http://django;
