--- a/ansible/django.env.j2
+++ b/ansible/django.env.j2
@@ -28,3 +28,6 @@ WEB_CONCURRENCY=4
 # Redis
 # ------------------------------------------------------------------------------
 REDIS_URL=redis://redis:6379/0
+
+OIDC_CLIENT_ID={{ scram_oidc_client_id }}
+OIDC_CLIENT_SECRET={{ scram_oidc_client_secret }}
