fix(oidc): fix the env var names

--- a/ansible/django.env.j2
+++ b/ansible/django.env.j2
@@ -1,6 +1,6 @@
 # General
 # ------------------------------------------------------------------------------
-# DJANGO_READ_DOT_ENV_FILE=True
+DJANGO_READ_DOT_ENV_FILE=True
 DJANGO_SETTINGS_MODULE=config.settings.production
 DJANGO_SECRET_KEY={{ scram_django_secret_key }}
 DJANGO_ADMIN_URL=admin/
@@ -23,5 +23,5 @@ WEB_CONCURRENCY=4
 # ------------------------------------------------------------------------------
 REDIS_URL=redis://redis:6379/0
 
-OIDC_CLIENT_ID={{ scram_oidc_client_id }}
-OIDC_CLIENT_SECRET={{ scram_oidc_client_secret }}
+OIDC_RP_CLIENT_ID={{ scram_oidc_client_id }}
+OIDC_RP_CLIENT_SECRET={{ scram_oidc_client_secret }}
