--- a/ansible/django.env.j2
+++ b/ansible/django.env.j2
@@ -4,7 +4,7 @@ DJANGO_READ_DOT_ENV_FILE=True
 DJANGO_SETTINGS_MODULE=config.settings.production
 DJANGO_SECRET_KEY={{ scram_django_secret_key }}
 DJANGO_ADMIN_URL=admin/
-DJANGO_ALLOWED_HOSTS={{ scram_nginx_host | default(ansible_fqdn) }}
+DJANGO_ALLOWED_HOSTS=["{{ scram_nginx_host | default(ansible_fqdn) }}", "{{ ansible_default_ipv4.address }}", "{{ ansible_default_ipv6.address }}"]
 
 # Security
 # ------------------------------------------------------------------------------
@@ -22,6 +22,13 @@ WEB_CONCURRENCY=4
 # Redis
 # ------------------------------------------------------------------------------
 REDIS_URL=redis://redis:6379/0
+
+OIDC_OP_JWKS_ENDPOINT = os.environ.get("OIDC_OP_JWKS_ENDPOINT", "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/certs")
+OIDC_OP_AUTHORIZATION_ENDPOINT = os.environ.get("OIDC_OP_AUTHORIZATION_ENDPOINT", "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/auth")
+OIDC_OP_TOKEN_ENDPOINT = os.environ.get("OIDC_OP_TOKEN_ENDPOINT", "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/token")
+OIDC_OP_USER_ENDPOINT = os.environ.get("OIDC_OP_USER_ENDPOINT", "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/userinfo")
+OIDC_RP_SIGN_ALGO = 'RS256'
+
 
 OIDC_RP_CLIENT_ID={{ scram_oidc_client_id }}
 OIDC_RP_CLIENT_SECRET={{ scram_oidc_client_secret }}
