--- a/ansible/django.env.j2
+++ b/ansible/django.env.j2
@@ -4,7 +4,7 @@ DJANGO_READ_DOT_ENV_FILE=True
 DJANGO_SETTINGS_MODULE=config.settings.production
 DJANGO_SECRET_KEY={{ scram_django_secret_key }}
 DJANGO_ADMIN_URL=admin/
-DJANGO_ALLOWED_HOSTS=["{{ scram_nginx_host | default(ansible_fqdn) }}", "{{ ansible_default_ipv4.address }}", "{{ ansible_default_ipv6.address }}"]
+DJANGO_ALLOWED_HOSTS="{{ scram_nginx_host | default(ansible_fqdn) }}", "{{ ansible_default_ipv4.address }}", "{{ ansible_default_ipv6.address }}"
 
 # Security
 # ------------------------------------------------------------------------------
