fix(SSO): fix OIDC endpoints
envrion.get was failing to find these things for some reason...gonna hardcode for now

--- a/ansible/django.env.j2
+++ b/ansible/django.env.j2
@@ -22,10 +22,10 @@ WEB_CONCURRENCY=4
 # ------------------------------------------------------------------------------
 REDIS_URL=redis://redis:6379/0
 
-OIDC_OP_JWKS_ENDPOINT = os.environ.get("OIDC_OP_JWKS_ENDPOINT", "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/certs")
-OIDC_OP_AUTHORIZATION_ENDPOINT = os.environ.get("OIDC_OP_AUTHORIZATION_ENDPOINT", "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/auth")
-OIDC_OP_TOKEN_ENDPOINT = os.environ.get("OIDC_OP_TOKEN_ENDPOINT", "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/token")
-OIDC_OP_USER_ENDPOINT = os.environ.get("OIDC_OP_USER_ENDPOINT", "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/userinfo")
+OIDC_OP_JWKS_ENDPOINT = "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/certs"
+OIDC_OP_AUTHORIZATION_ENDPOINT = "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/auth"
+OIDC_OP_TOKEN_ENDPOINT = "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/token"
+OIDC_OP_USER_ENDPOINT = "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/userinfo"
 OIDC_RP_SIGN_ALGO = 'RS256'
 
 
