--- a/ansible/django.env.j2
+++ b/ansible/django.env.j2
@@ -22,6 +22,7 @@ WEB_CONCURRENCY=4
 # ------------------------------------------------------------------------------
 REDIS_URL=redis://redis:6379/0
 
+{% if scram_prod == true %}
 OIDC_OP_JWKS_ENDPOINT = "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/certs"
 OIDC_OP_AUTHORIZATION_ENDPOINT = "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/auth"
 OIDC_OP_TOKEN_ENDPOINT = "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/token"
@@ -31,3 +32,4 @@ OIDC_RP_SIGN_ALGO = 'RS256'
 
 OIDC_RP_CLIENT_ID={{ scram_oidc_client_id }}
 OIDC_RP_CLIENT_SECRET={{ scram_oidc_client_secret }}
+{% endif %}
