--- a/scram/templates/navbar.html
+++ b/scram/templates/navbar.html
@@ -25,14 +25,14 @@
         {% endif %}
         {% if user.is_authenticated %}
           <li class="nav-item d-inline mt-2">
-+           <a id="account-home" class="nav-link" href="{% url 'users:detail' user.username %}">{{ user.name }}</a>
-+         </li>
-+         <li class="nav-item mt-2 d-inline">
-+            <form action="{% url 'oidc_logout' %}" method="post">
-+              {% csrf_token %}
-+             <button class="btn btn-outline-info ml-2 mb-2" style="outline-color:#2ba6c8!important;" type="submit">Logout</button>
-+            </form>
-+          </li>
+            <a id="account-home" class="nav-link" href="{% url 'users:detail' user.username %}">{{ user.name }}</a>
+          </li>
+          <li class="nav-item mt-2 d-inline">
+             <form action="{% url 'oidc_logout' %}" method="post">
+               {% csrf_token %}
+              <button class="btn btn-outline-info ml-2 mb-2" style="outline-color:#2ba6c8!important;" type="submit">Logout</button>
+             </form>
+          </li>
         {% else %}
            <li class="nav-item mt-2 d-inline">
             <a class="btn btn-outline-info ml-2 mb-2" style="color:#2ba6c8!important;" role="button" href="{% url 'oidc_authentication_init' %}">Login</a>
