fix(spelling): accidentally threw a j on there for some reason

--- a/scram/templates/navbar.html
+++ b/scram/templates/navbar.html
@@ -8,7 +8,7 @@
     <form class="d-flex w-100 mt-2 d-inline" action="{% url 'route_manager:search' %}" method="POST">
       {% csrf_token %}
       <input class="form-control pl-2 me-2" name="cidr" type="search" placeholder="cidr">
-      <button class="btn btn-info mb-2" style="background-color:#2ba6c8!important;" type="submit">Searchj</button>
+      <button class="btn btn-info mb-2" style="background-color:#2ba6c8!important;" type="submit">Search</button>
     </form>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
