style(navbar): remove tabs on nav-bar, it looks bad

--- a/scram/templates/navbar.html
+++ b/scram/templates/navbar.html
@@ -14,7 +14,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav nav-tabs ml-auto text-nowrap">
+      <ul class="navbar-nav ml-auto text-nowrap">
         <li class="nav-item d-inline mt-2">
           <a id="entry-list" class="nav-link" href="{% url 'route_manager:entry-list' %}">{% trans "Entries" %}</a>
         </li>
