--- a/scram/templates/403.html
+++ b/scram/templates/403.html
@@ -3,7 +3,18 @@
 {% block title %}Forbidden (403){% endblock %}
 
 {% block content %}
-<h1>Forbidden (403)</h1>
-
-<p>{% if exception %}{{ exception }}{% else %}You're not allowed to access this page.{% endif %}</p>
+<div class="page-wrap d-flex flex-row align-items-center">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 text-center">
+                {% if exception %}
+                  {{ exception }}
+                {% else %}
+                <span class="display-1 d-block">403</span>
+                <div class="mb-4 lead">You do not have permission to view this page.</div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
