style(error_pages): make the unhappy code path look nicer too

--- a/scram/templates/404.html
+++ b/scram/templates/404.html
@@ -8,7 +8,8 @@
         <div class="row justify-content-center">
             <div class="col-md-12 text-center">
                 {% if exception %}
-                  {{ exception }}
+                  <span class="display-1 d-block">{{ exception }}</span>
+                  <div class="mb-4 lead">The page you are looking for was not found.</div>
                 {% else %}
                 <span class="display-1 d-block">404</span>
                 <div class="mb-4 lead">The page you are looking for was not found.</div>
