--- a/scram/templates/403.html
+++ b/scram/templates/403.html
@@ -8,7 +8,8 @@
         <div class="row justify-content-center">
             <div class="col-md-12 text-center">
                 {% if exception %}
-                  {{ exception }}
+                  <span class="display-1 d-block">{{ exception }}</span>
+                  <div class="mb-4 lead">You do not have permission to view this page.</div>
                 {% else %}
                 <span class="display-1 d-block">403</span>
                 <div class="mb-4 lead">You do not have permission to view this page.</div>
