--- a/scram/templates/route_manager/home.html
+++ b/scram/templates/route_manager/home.html
@@ -10,9 +10,7 @@
       </div>
     </div>
   </div>
-  {% for group in scram_readwrite %}
-    {{ group }}
-  {% endfor %}
+  {% if readwrite %}
   <div class="d-flex justify-content-center mt-2">
     <form class="form-inline" action="{% url 'route_manager:add' %}" method="post">
       {% csrf_token %}
@@ -29,6 +27,7 @@
       </div>
     </form>
   </div>
+  {% endif %}
   <div class="row">
     {% for actiontype, entry_list in entries.items %}
       <div class="col">
