style(precommit): ran hooks

--- a/ansible/django.env.j2
+++ b/ansible/django.env.j2
@@ -24,6 +24,7 @@ REDIS_URL=redis://redis:6379/0
 
 {% if scram_prod == true %}
 {% if inventory_hostname != "localhost" %}
+SCRAM_AUTH_METHOD = "oidc"
 OIDC_OP_JWKS_ENDPOINT = "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/certs"
 OIDC_OP_AUTHORIZATION_ENDPOINT = "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/auth"
 OIDC_OP_TOKEN_ENDPOINT = "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/token"
