fix(env-vars): cherry pick some commits to fix my bad envvar writing

--- a/ansible/django.env.j2
+++ b/ansible/django.env.j2
@@ -24,12 +24,13 @@ REDIS_URL=redis://redis:6379/0
 
 {% if scram_prod == true %}
 {% if inventory_hostname != "localhost" %}
-SCRAM_AUTH_METHOD = "oidc"
-OIDC_OP_JWKS_ENDPOINT = "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/certs"
-OIDC_OP_AUTHORIZATION_ENDPOINT = "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/auth"
-OIDC_OP_TOKEN_ENDPOINT = "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/token"
-OIDC_OP_USER_ENDPOINT = "https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/userinfo"
-OIDC_RP_SIGN_ALGO = 'RS256'
+SCRAM_AUTH_METHOD=oidc
+OIDC_OP_JWKS_ENDPOINT=https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/certs
+OIDC_OP_AUTHORIZATION_ENDPOINT=https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/auth
+OIDC_OP_TOKEN_ENDPOINT=https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/token
+OIDC_OP_USER_ENDPOINT=https://sso.es.net/auth/realms/esnetldap/protocol/openid-connect/userinfo
+OIDC_RP_SIGN_ALGO=RS256
+
 
 
 OIDC_RP_CLIENT_ID={{ scram_oidc_client_id }}
