--- a/scram/templates/route_manager/entry_detail.html
+++ b/scram/templates/route_manager/entry_detail.html
@@ -7,11 +7,13 @@
         <tr>
           <th>Entry</th>
           <th>Actiontype</th>
+          <th>Is Active</th>
           <th></th>
         </tr>
         <tr>
           <td>{{ entry.route }}</td>
           <td class="text-center">{{ entry.actiontype.name }}</td>
+          <td>{{ entry.is_active }}</td>
           <td>
             <form class="form-inline" action="{% url 'route_manager:delete' entry.id %}" method="POST">
             {% csrf_token %}
