--- a/scram/templates/route_manager/entry_detail.html
+++ b/scram/templates/route_manager/entry_detail.html
@@ -17,7 +17,7 @@
           <td>
             <form class="form-inline" action="{% url 'route_manager:delete' entry.id %}" method="POST">
             {% csrf_token %}
-            <button class="btn btn-danger btn-sm" type="submit">Delete Entry</button>
+            <button class="btn btn-danger btn-sm" type="submit">Deactivate Entry</button>
             </form></td>
         </tr>
       </table>
