--- a/scram/templates/account/logout.html
+++ b/scram/templates/account/logout.html
@@ -9,7 +9,7 @@
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
-<form method="post" action="{% url 'account_logout' %}">
+<form method="post" action="{% url 'local_auth:logout' %}">
   {% csrf_token %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
@@ -19,4 +19,3 @@
 
 
 {% endblock %}
-
