--- a/scram/templates/navbar.html
+++ b/scram/templates/navbar.html
@@ -27,6 +27,9 @@
           <li class="nav-item d-inline mt-2">
             <a id="account-home" class="nav-link" href="{% url 'users:detail' user.username %}">{{ user.name }}</a>
           </li>
+          <li class="nav-item d-inline mt-3">
+            <span class="badge badge-info badge-pill" style="background-color:#2ba6c8!important;">Blocks:<br>{{ active_block_entries }}</span>
+          </li>
           <li class="nav-item mt-2 d-inline">
              <form action="{{ logout }}" method="post">
                {% csrf_token %}
@@ -34,6 +37,9 @@
              </form>
           </li>
         {% else %}
+            <li class="nav-item d-inline mt-3">
+              <span class="badge badge-info badge-pill" style="background-color:#2ba6c8!important;">Blocks:<br>{{ active_block_entries }}</span>
+            </li>
            <li class="nav-item mt-2 d-inline">
             <a class="btn btn-outline-info ml-2 mb-2" style="color:#2ba6c8!important;" role="button" href="{{ login }}">Login</a>          </li>
         {% endif %}
